Berger Method Completed